--- a/MyShop.Data/App.config
+++ b/MyShop.Data/App.config
@@ -4,6 +4,12 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+   <connectionStrings>
+    <clear/>
+    <add name="MyShopConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=MyShop;Integrated Security=False;User Id=sa;Password=sa12345;MultipleActiveResultSets=True"/>
+  <!--<add name="TeduShopConnection" connectionString="Data Source=.;Initial Catalog=TeduShop;User ID=sa;Password=sa12345" providerName="System.Data.SqlClient"/>-->
+  </connectionStrings>
+  
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
