--- a/MyShop.Web/Web.config
+++ b/MyShop.Web/Web.config
@@ -9,7 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-MyShop.Web-20160706021440.mdf;Initial Catalog=aspnet-MyShop.Web-20160706021440;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <clear/>
+    <add name="MyShopConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=MyShop;Integrated Security=False;User Id=sa;Password=sa12345;MultipleActiveResultSets=True"/>
+    <!--<add name="TeduShopConnection" connectionString="Data Source=.;Initial Catalog=TeduShop;User ID=sa;Password=sa12345" providerName="System.Data.SqlClient"/>-->
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
