--- a/MyShop.Data/MyShop.Data.csproj
+++ b/MyShop.Data/MyShop.Data.csproj
@@ -60,9 +60,14 @@
     <Compile Include="Migrations\201607060703335_InitialDB.Designer.cs">
       <DependentUpon>201607060703335_InitialDB.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201607060833327_AddTableError.cs" />
+    <Compile Include="Migrations\201607060833327_AddTableError.Designer.cs">
+      <DependentUpon>201607060833327_AddTableError.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MyShopDbContext.cs" />
+    <Compile Include="Repositories\ErrorRepository.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
     <Compile Include="Repositories\MenuGroupRepository.cs" />
     <Compile Include="Repositories\MenuRepository.cs" />
@@ -98,6 +103,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201607060703335_InitialDB.resx">
       <DependentUpon>201607060703335_InitialDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607060833327_AddTableError.resx">
+      <DependentUpon>201607060833327_AddTableError.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
