--- a/MyShop.Data/MyShop.Data.csproj
+++ b/MyShop.Data/MyShop.Data.csproj
@@ -38,6 +38,14 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -63,6 +71,10 @@
     <Compile Include="Migrations\201607060833327_AddTableError.cs" />
     <Compile Include="Migrations\201607060833327_AddTableError.Designer.cs">
       <DependentUpon>201607060833327_AddTableError.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201607070853311_Intergate_Indentity.cs" />
+    <Compile Include="Migrations\201607070853311_Intergate_Indentity.Designer.cs">
+      <DependentUpon>201607070853311_Intergate_Indentity.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -106,6 +118,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201607060833327_AddTableError.resx">
       <DependentUpon>201607060833327_AddTableError.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607070853311_Intergate_Indentity.resx">
+      <DependentUpon>201607070853311_Intergate_Indentity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
