--- a/MyShop.Web/MyShop.Web.csproj
+++ b/MyShop.Web/MyShop.Web.csproj
@@ -253,6 +253,8 @@
     <Content Include="Scripts\plusgin\angular\angular.js" />
     <Content Include="Scripts\plusgin\angular\angular.min.js" />
     <Content Include="Scripts\plusgin\angular\index.js" />
+    <Content Include="Scripts\spa\app.js" />
+    <Content Include="Scripts\spa\myShopDirective.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -265,7 +267,6 @@
   <ItemGroup>
     <Folder Include="Assets\Admin\" />
     <Folder Include="Assets\Client\" />
-    <Folder Include="Scripts\spa\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
