--- a/MyShop.Web/MyShop.Web.csproj
+++ b/MyShop.Web/MyShop.Web.csproj
@@ -242,6 +242,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app\components\products\product.routes.js" />
+    <Content Include="app\components\products\productAddController.js" />
+    <Content Include="app\components\products\productAddView.html" />
+    <Content Include="app\components\products\productEditController.js" />
+    <Content Include="app\components\products\productEditView.html" />
+    <Content Include="app\components\products\productListController.js" />
+    <Content Include="app\components\products\productListView.html" />
     <Content Include="Content\Site.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -249,12 +256,6 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Scripts\plusgin\angular\angular-csp.css" />
-    <Content Include="Scripts\plusgin\angular\angular.js" />
-    <Content Include="Scripts\plusgin\angular\angular.min.js" />
-    <Content Include="Scripts\plusgin\angular\index.js" />
-    <Content Include="Scripts\spa\app.js" />
-    <Content Include="Scripts\spa\myShopDirective.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -265,7 +266,17 @@
     <Content Include="Views\Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Assets\Admin\" />
+    <Folder Include="app\components\orders\" />
+    <Folder Include="app\components\product_categories\" />
+    <Folder Include="app\components\roles\" />
+    <Folder Include="app\components\users\" />
+    <Folder Include="app\shared\directive\" />
+    <Folder Include="app\shared\footer\" />
+    <Folder Include="app\shared\navigation\" />
+    <Folder Include="Assets\Admin\css\" />
+    <Folder Include="Assets\Admin\image\" />
+    <Folder Include="Assets\Admin\js\" />
+    <Folder Include="Assets\Admin\libs\" />
     <Folder Include="Assets\Client\" />
   </ItemGroup>
   <ItemGroup>
@@ -299,15 +310,6 @@
   <ItemGroup>
     <Content Include=".bowerrc" />
     <Content Include="bower.json" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Scripts\plusgin\angular\.bower.json" />
-    <Content Include="Scripts\plusgin\angular\angular.min.js.gzip" />
-    <Content Include="Scripts\plusgin\angular\angular.min.js.map" />
-    <Content Include="Scripts\plusgin\angular\bower.json" />
-    <Content Include="Scripts\plusgin\angular\LICENSE.md" />
-    <Content Include="Scripts\plusgin\angular\package.json" />
-    <Content Include="Scripts\plusgin\angular\README.md" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\_ViewStart.cshtml" />
