--- a/MyShop.Data/MyShop.Data.csproj
+++ b/MyShop.Data/MyShop.Data.csproj
@@ -76,6 +76,10 @@
     <Compile Include="Migrations\201607070853311_Intergate_Indentity.Designer.cs">
       <DependentUpon>201607070853311_Intergate_Indentity.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201607200159199_AddTagsField.cs" />
+    <Compile Include="Migrations\201607200159199_AddTagsField.Designer.cs">
+      <DependentUpon>201607200159199_AddTagsField.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MyShopDbContext.cs" />
@@ -121,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201607070853311_Intergate_Indentity.resx">
       <DependentUpon>201607070853311_Intergate_Indentity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201607200159199_AddTagsField.resx">
+      <DependentUpon>201607200159199_AddTagsField.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
