--- a/MyShop.Web/bower.json
+++ b/MyShop.Web/bower.json
@@ -12,7 +12,9 @@
     "bootbox": "~4.4.0",
     "ngBootbox": "~0.1.3",
     "ng-ckeditor": "~0.2.1",
-    "ckeditor": "~4.5.9"
+    "ckeditor": "~4.5.9",
+    "angular-local-storage": "~0.2.7",
+    "angular-loading-bar": "~0.9.0"
   
   }
 }
