--- a/MyShop.Web/Web.config
+++ b/MyShop.Web/Web.config
@@ -8,17 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-    <clear />
-    <add name="MyShopConnection" providerName="System.Data.SqlClient" connectionString="Data Source=.;Initial Catalog=MyShop;Integrated Security=False;User Id=sa;Password=sa12345;MultipleActiveResultSets=True" />
-    <!--<add name="TeduShopConnection" connectionString="Data Source=.;Initial Catalog=TeduShop;User ID=sa;Password=sa12345" providerName="System.Data.SqlClient"/>-->
-  </connectionStrings>
-  <appSettings>
-    <add key="webpages:Version" value="3.0.0.0" />
-    <add key="webpages:Enabled" value="false" />
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
+  <connectionStrings configSource="ConnectionStrings.config"></connectionStrings>
+  <appSettings configSource="AppSettings.config"></appSettings>
+ 
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
